# dhara-redevelopment

./: .code-review-graphignore  .dockerignore  .env.example  .gitattributes  .gitignore  .graphifyignore  .wslconfig  Dhara_AI_Official_API_Collection.json  Dhara_AI_Report_Testing.postman_collection.json  FE_API_INTEGRATION.md  Makefile  README.md  check_cells.py  dhara.py  docker-compose.yml  graphify_query.py  init.sql  monitor_report.ps1  network-policies.yml  production.env.example  prometheus-alerts.yml  prometheus.yml  pyproject.toml  pytest.ini  render.yaml  ruff.toml  temp_check.ps1  temp_check2.ps1  temp_check3.ps1  temp_check4.ps1  temp_check5.ps1  test_custom_plot.py  test_flow.py  test_login.json  test_login.py  test_portfolio_apis.ps1  test_status.py  test_wait.py  traefik.yml
dhara_shared/: __init__.py  config.py  models.py  pyproject.toml
dhara_shared/dhara_common/: cache.py  exceptions.py  http.py  logging.py  metrics.py  tracing.py  wait_for_it.py
dhara_shared/dhara_shared/: __init__.py  config.py
dhara_shared/dhara_shared/dhara_common/: banner.py  cache.py  exceptions.py
dhara_shared/src/dhara_shared/: __init__.py
services/aviation_height/: .env.example  Dockerfile  README.md  entrypoint.sh  main.py  property_heights.csv  pyproject.toml
services/aviation_height/core/: __init__.py  banner.py
services/aviation_height/logic/: __init__.py
services/aviation_height/routers/: __init__.py  height_router.py
services/aviation_height/schemas/: __init__.py
services/aviation_height/services/: __init__.py  height_service.py  storage.py
services/aviation_height/tests/: test_height_service.py
services/dp_remarks_report/: .env.example  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  test_dprmarks.py
services/dp_remarks_report/core/: __init__.py  banner.py
services/dp_remarks_report/logic/: __init__.py  dp_arcgis_client.py  dp_pdf_parser.py  storage.py
services/dp_remarks_report/routers/: __init__.py
services/dp_remarks_report/schemas/: __init__.py
services/dp_remarks_report/services/: __init__.py  ccavenue_payer.py  dp_arcgis_client.py  dp_gis_metrics.py  dp_pdf_parser.py  dp_scraper.py  payment_queue.py  scrape_queue.py  storage.py
services/dp_remarks_report/tests/: test_ccavenue_payer.py  test_dp_pdf_parser.py  test_payment_queue.py
services/height_service/: .env.example  Dockerfile  main.py  pyproject.toml
services/height_service/core/: __init__.py
services/height_service/routers/: height_router.py
services/height_service/schemas/: __init__.py
services/height_service/services/: height_service.py
services/ocr_service/: Dockerfile  README.md  main.py  pyproject.toml
services/ocr_service/core/: __init__.py
services/ocr_service/routers/: __init__.py
services/orchestrator/: .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  migrate.sh  pyproject.toml  routers.rar  schemas.rar  test_full_pipeline.py
services/orchestrator/agent/: __init__.py  llm_client.py  prompts.py  runner.py  tool_executor.py  tools.py
services/orchestrator/alembic/: env.py
services/orchestrator/core/: ai_utils.py  banner.py  circuit_breaker.py  config.py  dependencies.py  exceptions.py  logging_config.py  middleware.py  security.py
services/orchestrator/db/: __init__.py  base.py  mixins.py  seed.py
services/orchestrator/logic/: __init__.py  address_resolver.py  admin_service.py  agent_service.py  auth_service.py  cloudinary.py  cts_fp_resolver.py  dossier_service.py  feasibility_orchestrator.py  feasibility_service.py  landing_service.py  legacy_service.py  profile_service.py  razorpay_service.py  redis.py  search_service.py  society_service.py  team_service.py  worker.py
services/orchestrator/models/: __init__.py  audit_log.py  enquiry.py  enums.py  landing.py  report.py  role.py  society.py  subscription.py  team.py  user.py
services/orchestrator/repositories/: admin_repository.py  enquiry_repository.py  landing_repository.py  society_repository.py  team_repository.py  user_repository.py
services/orchestrator/routers/: __init__.py  admin.py  auth.py  feasibility.py  landing.py  profile.py  search.py  societies.py  subscription.py  team.py  verification.py  webhooks.py  websocket.py
services/orchestrator/schemas/: __init__.py  admin.py  auth.py  common.py  feasibility.py  landing.py  legacy.py  profile.py  society.py  subscription.py  team.py
services/orchestrator/scripts/: cleanup_logs.py  init_tables.py  setup_cron.sh
services/orchestrator/services/: __init__.py  address_resolver.py  address_service.py  admin_service.py  agent_service.py  auth_service.py  cloudinary.py  cts_fp_resolver.py  dossier_service.py  email.py  feasibility_orchestrator.py  feasibility_service.py  landing_service.py  legacy_service.py  pmc_verification.py  profile_service.py  razorpay_service.py  redis.py  search_service.py  society_service.py  team_service.py  worker.py  (+2 more)
services/pr_card_scraper/: .env.example  Dockerfile  README.md  entrypoint.sh  main.py  mock_scraper.py  pyproject.toml  restart_watchdog.bat  run_scraper.py  setup.py  watchdog_run.py
services/premium_checker/: Dockerfile  main.py  pyproject.toml
services/rag_service/: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  Dockerfile.webui  README.md  alembic.ini  cli.py  docker-compose.openwebui.yml  docker-compose.postgres.yml  docker-compose.yml  entrypoint.sh  main.py  ocr_api.py  pyproject.toml  requirements.txt  setup_cron.sh  start.sh
services/ready_reckoner/: .env.example  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml
services/report_generator/: .env.example  Dockerfile  README.md  apply_manual_sample.py  check_output_values.py  entrypoint.sh  find_carpet.py  find_corpus.py  hit_api_generate_template.py  inspect_oq.py  inspect_p.py  main.py  pyproject.toml  test_yellow_fields.py  verify_excel.py  verify_yellow_mapping.py  wait_for_server.py  zero_yellow_fields.py
services/site_analysis/: .env.example  Dockerfile  README.md  entrypoint.sh  main.py  property_coordinates.csv  pyproject.toml  test_api.py
(+379 files in other folders)
