[project]
name = "dhara_shared"
version = "0.1.0"
description = "Shared schemas and utilities for Dhara AI"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dhara_shared*"]
