[project]
name = "dhara_shared"
version = "0.1.0"
description = "Shared schemas and utilities for Dhara AI"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "cloudinary>=1.40.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-httpx>=0.62b1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "sentry-sdk[fastapi]>=2.58.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dhara_shared*"]
