[project]
name = "height-service"
version = "1.0.0"
description = "Height Service - NOCAS Integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.7.0",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["config", "schemas", "services", "routes"]
