[project]
name = "ocr-service"
version = "1.0.0"
description = "OCR Service - Municipal Document Extraction via MuniScan"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.7.0",
    "google-generativeai>=0.8.0",
    "PyMuPDF>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "pytesseract>=0.3.13",
    "dhara_shared",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
dhara_shared = { workspace = true }
