[project]
name = "orchestrator"
version = "3.0.0"
description = "Dhara AI — Redevelopment Orchestrator Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "anthropic>=0.49.0",
    "pydantic[email]>=2.9.0",
    "google-generativeai>=0.8.0",
    "pydantic-settings>=2.7.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "redis>=5.2.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "pybreaker>=1.4.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    "cloudinary>=1.41.0",
    "aiofiles>=24.1.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    "websockets>=13.0",
    "bcrypt==4.0.1",
    "passlib[bcrypt]>=1.7.4",
    "tenacity>=8.5.0",
    "psycopg2-binary>=2.9.0",
    "razorpay>=1.4.0",
    "dhara_shared",
    "arq>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "agent*", "db*", "models*", "routers*", "schemas*", "services*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
dhara_shared = { workspace = true }
