[project]
name = "site-analysis"
version = "1.0.0"
description = "Site Analysis Service - Google Maps API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.7.0",
    "googlemaps>=4.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["config", "schemas", "services", "routes"]
