[project]
name = "site-analysis"
version = "1.0.0"
description = "Site Analysis Service - Google Maps API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.7.0",
    "googlemaps>=4.10.0",
    "playwright>=1.50.0",
    "dhara_shared",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "schemas*", "services*", "routes*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
dhara_shared = { workspace = true }

